# orin-nano-controller

./: .gitignore  AGENTS.md  Cargo.toml  justfile
.cargo/: config.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
controller-core/: Cargo.toml
controller-core/src/: lib.rs
controller-core/src/bridge/: mod.rs
controller-core/src/orchestrator/: mod.rs
controller-core/src/repl/: catalog.rs  commands.rs  completion.rs  grammar.rs  mod.rs  status.rs
controller-core/src/sequences/: fault.rs  mod.rs  normal.rs  recovery.rs
controller-core/src/telemetry/: mod.rs
controller-core/tests/: fault.rs  normal_reboot.rs  recovery.rs
emulator/: Cargo.toml
emulator/src/: main.rs  session.rs
firmware/: Cargo.toml
firmware/src/: main.rs  panic.rs  status.rs
firmware/src/bridge/: mod.rs
firmware/src/hw/: mod.rs  power.rs
firmware/src/repl/: commands.rs  mod.rs
firmware/src/runtime/: bridge_task.rs  mod.rs  repl_task.rs  strap_task.rs  usb_task.rs
firmware/src/straps/: mod.rs  orchestrator.rs  sequences.rs
firmware/src/telemetry/: mod.rs
firmware/src/usb/: mod.rs
firmware/tests/: dummy.rs
pcb/: .gitignore  README.md  orin-nano-controller.kicad_prl  straps.kicad_sch  usb.kicad_sch
pcb/orin-nano-controller/: .gitignore  BASELINE.md  COMPONENT_CHECKLIST.md  README.md  README_REVIEW.md  REVIEW_REPORT.txt  REVIEW_SUMMARY.md  SCHEMATIC_HIERARCHY.md  SCHEMATIC_REVIEW.md  controller.kicad_sch  orin-nano-controller.kicad_pcb  orin-nano-controller.kicad_prl  orin-nano-controller.kicad_pro  orin-nano-controller.kicad_sch  power.kicad_sch  straps.kicad_sch  usb.kicad_sch
specs/001-build-orin-controller/: boot_state_machine.dot  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-build-orin-controller/checklists/: requirements.md
specs/001-build-orin-controller/contracts/: cli-grammar.md
specs/001-build-orin-controller/evidence/: bench-setup.md
