[workspace]
resolver = "3"
members = [
    "controller-core",
    "emulator",
    "firmware",
]

[workspace.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-futures = "0.1.2"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.4.0", features = ["memory-x", "stm32g0b1ke", "time-driver-tim1"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = {  version = "0.5.1", default-features = false }
heapless = "0.8.0"
logos = { version = "0.14", default-features = false, features = ["export_derive"] }
panic-halt = "1.0.0"
winnow = { version = "0.6", default-features = false }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
