[workspace]
resolver = "3"
members = [
    "controller-core",
    "emulator",
    "firmware",
]

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = "s"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"

[workspace.dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-futures = "0.1.2"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.4.0", features = ["memory-x", "stm32g0b1ke", "time-driver-tim1"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
embassy-usb = {  version = "0.5.1", default-features = false }
heapless = "0.9.1"
regal = { git = "https://github.com/NathanHowell/regal", rev = "6b913acd86a985db694cda639d2b3d9a574e8abd" }
regal-macros = { git = "https://github.com/NathanHowell/regal", package = "regal-macros", rev = "6b913acd86a985db694cda639d2b3d9a574e8abd" }
panic-halt = "1.0.0"
winnow = { version = "0.7.13", default-features = false }
critical-section = { version = "1.2.0", features = ["restore-state-bool"] }
portable-atomic = { version = "1.11.1", default-features = false, features = ["critical-section"] }
static_cell = "2.1.1"
