[package]
name = "controller-core"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
default = []
alloc = []

[dependencies]
regal = { workspace = true }
regal-macros = { workspace = true }
winnow = { workspace = true }
heapless = { workspace = true }
