[package]
name = "orin-nano-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
controller-core = { path = "../controller-core" }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
heapless = { workspace = true }
logos = { workspace = true, default-features = false, features = ["export_derive"] }
winnow = { workspace = true, default-features = false }

[target.'cfg(target_os = "none")'.dependencies]
defmt = "0.3"
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-executor = { version = "0.9.1", features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { version = "0.4.0", features = ["memory-x", "stm32g0b1ke", "time-driver-tim1"] }
embassy-usb = { version = "0.3.0", default-features = false }
panic-halt = "1.0.0"
