[package]
name = "orin-nano-controller"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
controller-core = { path = "../controller-core" }
embassy-time = { workspace = true }
embassy-sync = { workspace = true }
embassy-futures = { workspace = true }
heapless = { workspace = true }
portable-atomic = { workspace = true }
static_cell = { workspace = true }

[target.'cfg(target_os = "none")'.dependencies]
defmt = { workspace = true }
defmt-rtt = { workspace = true }
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embassy-executor = { workspace = true, features = ["arch-cortex-m", "executor-thread"] }
embassy-stm32 = { workspace = true, features = ["memory-x", "stm32g0b1ke", "time-driver-tim1"] }
embassy-usb = { workspace = true, default-features = false }
embedded-io-async = "0.6.1"
critical-section = { workspace = true }
